create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -108,7 +108,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Inversión</h4>
                         <h5 class="card-subtitle"></h5>
-                        <p class="card-text">El gobierno mexicano proyecto para el año 2017 una inversión de 12,500 millones de dólares para combatir el sobrepeso.<br><br></p>
+                        <p class="card-text">El gobierno mexicano proyectó para el año 2017 una inversión de 12,500 millones de dólares para combatir el sobrepeso.<br><br></p>
                         
                     </div>
                 </div>
