--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logo-1-235x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">Watch Me</a>
+                        <a href="https://alerosas2.github.io/watchme/" class="navbar-logo"><img src="assets/images/logo-1-235x128.png" alt="Mobirise"></a>
+                        <a class="navbar-caption" href="https://alerosas2.github.io/watchme/">Watch Me</a>
                     </div>
 
                 </div>
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">OVERVIEW</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#features2-d">Problemática</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#msg-box5-h">Solución</a></li><li class="nav-item"><a class="nav-link link" href="index.html#testimonials1-i">Objetivos</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-o">Factibilidad técnica</a></li><li class="nav-item"><a class="nav-link link" href="index.html#social-buttons3-e">Comparte</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -175,7 +175,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-xs-center">
-                        <h3 class="mbr-section-title display-2">Solución</h3>
+                        <h3 class="mbr-section-title display-2">Objetivos</h3>
                         <small class="mbr-section-subtitle"></small>
                     </div>
                 </div>
