--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://alerosas2.github.io/watchme/" class="navbar-logo"><img src="assets/images/logo-1-235x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://alerosas2.github.io/watchme/">Watch Me</a>
+                        <a href="#top" class="navbar-logo"><img src="assets/images/logo-1-235x128.png" alt="Mobirise"></a>
+                        <a class="navbar-caption" href="#top">Watch Me</a>
                     </div>
 
                 </div>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
