--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header4-c" data-bg-video="https://www.youtube.com/embed/RnkmlU9l_7Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -167,7 +167,7 @@
 
 </section>
 
-<section class="mbr-section" id="testimonials1-i" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="testimonials1-i" style="background-image: url(assets/images/mbr-2000x1122.jpg); padding-top: 80px; padding-bottom: 120px;">
 
     
 
@@ -227,7 +227,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-o" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-o" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -238,7 +238,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding" id="features4-p" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-cards mbr-section mbr-section-nopadding" id="features4-p" style="background-color: rgb(0, 0, 0);">
 
     
 
@@ -375,8 +375,8 @@
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/social-likes/social-likes.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
+  <script src="assets/social-likes/social-likes.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
